--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,6 @@
       "js": ["app.js"]
   }],
   "permissions": [
-      "activeTab",
-      "https://ajax.googleapis.com/"
+      "activeTab"
   ]
 }
