--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "browser_action":
   {
       "default_icon": "icon.png",
-      "default_popup": "blibli.html",
+      "default_popup": "index.html",
       "default_title": "Toko Online Blibli.com, Sensasi Belanja Online Shop ala Mall"
   },
   "content_scripts": [
